--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "firebase": "^9.23.0",
+    "@types/html-entities": "^1.3.4",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.4.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "firebase": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.13.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.2",
     "slick-carousel": "^1.8.1",
+    "typescript": "^5.1.6",
     "web-vitals": "^3.3.2"
   },
   "scripts": {
@@ -24,6 +30,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "overrides": {
+    "@svgr/webpack": "^6.3.1",
+    "webpack-bundle-analyzer": "^4.8.0",
+    "typescript": "^5.1.6",
+    "json5": "^2.2.3"
   },
   "eslintConfig": {
     "extends": [
