🔧 프로젝트 구조수정

--- a/pure-storybook/.babelrc.json
+++ b/pure-storybook/.babelrc.json
@@ -12,5 +12,21 @@
     "@babel/preset-typescript",
     "@babel/preset-react"
   ],
-  "plugins": []
+  "plugins": [
+    [
+      "babel-plugin-styled-components",
+      {
+        "ssr": true,
+        "fileName": true,
+        "displayName": true,
+        "pure": true,
+        "preprocess": false
+      }
+    ]
+  ],
+  "env": {
+    "production": {
+      "plugins": ["transform-remove-console"]
+    }
+  }
 }
