--- a/pure-storybook/package.json
+++ b/pure-storybook/package.json
@@ -22,9 +22,71 @@
     "@storybook/addon-mdx-gfm": "^7.0.26",
     "@storybook/html": "^7.0.26",
     "@storybook/html-webpack5": "^7.0.26",
+    "@types/styled-components": "^5.1.26",
     "babel-loader": "^9.1.3",
+    "babel-plugin-styled-components": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.0.26"
+    "react-scripts": "^5.0.1",
+    "storybook": "^7.0.26",
+    "webpack": "^5.88.1",
+    "webpack-bundle-analyzer": "^4.9.0"
+  },
+  "dependencies": {
+    "@storybook/addon-docs": "^7.0.27",
+    "@storybook/preset-create-react-app": "^7.0.27",
+    "@storybook/react-webpack5": "^7.0.27",
+    "@types/html-entities": "^1.3.4",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "html-entities": "^2.4.0",
+    "styled-components": "^5.3.9",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "typescript": "^5.1.6"
+  },
+  "overrides": {
+    "typescript": "^5.1.6",
+    "@svgr/webpack": "^6.3.1",
+    "webpack-bundle-analyzer": "^4.9.0"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    },
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ],
+    "*.{md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "optionalDependencies": {
+    "fsevents": "*"
+  },
+  "browser": {
+    "crypto": false
   }
 }
