--- a/package.json
+++ b/package.json
@@ -13,42 +13,41 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.7",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@storybook/addon-actions": "^7.6.7",
-    "@storybook/addon-essentials": "^7.6.7",
-    "@storybook/addon-interactions": "^7.6.7",
-    "@storybook/addon-links": "^7.6.7",
-    "@storybook/addon-mdx-gfm": "^7.6.7",
-    "@storybook/html": "^7.6.7",
-    "@storybook/html-webpack5": "^7.6.7",
+    "@storybook/addon-actions": "^7.6.16",
+    "@storybook/addon-essentials": "^7.6.16",
+    "@storybook/addon-interactions": "^7.6.16",
+    "@storybook/addon-links": "^7.6.16",
+    "@storybook/addon-mdx-gfm": "^7.6.16",
+    "@storybook/html": "^7.6.16",
+    "@storybook/html-webpack5": "^7.6.16",
     "@types/styled-components": "^5.1.34",
     "babel-loader": "^9.1.3",
     "babel-plugin-styled-components": "^2.1.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "chromatic": "^10.2.0",
+    "chromatic": "^10.9.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "storybook": "^7.6.7",
-    "webpack": "^5.89.0",
+    "storybook": "^7.6.16",
+    "webpack": "^5.90.2",
     "webpack-bundle-analyzer": "^4.10.1"
   },
   "dependencies": {
-    "@storybook/addon-docs": "^7.6.7",
-    "@storybook/preset-create-react-app": "^7.6.7",
-    "@storybook/react-webpack5": "^7.6.7",
+    "@storybook/addon-docs": "^7.6.16",
+    "@storybook/preset-create-react-app": "^7.6.16",
+    "@storybook/react-webpack5": "^7.6.16",
     "@types/html-entities": "^1.3.4",
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
     "html-entities": "^2.4.0",
     "styled-components": "^5.3.9",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^5.3.3",
-    "fsevents": "*"
+    "typescript": "^5.3.3"
   },
   "overrides": {
     "typescript": "^5.3.3",
