--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
+    "@testing-library/react": "^14.2.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/html-entities": "^1.3.4",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "firebase": "^10.8.0",
+    "@types/node": "^20.12.4",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
+    "axios": "^1.6.8",
+    "firebase": "^10.10.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "recoil": "^0.7.7",
@@ -24,7 +27,8 @@
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
     "slick-carousel": "^1.8.1",
-    "typescript": "^5.3.3",
+    "styled-components": "^6.1.8",
+    "typescript": "^5.4.3",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
@@ -36,7 +40,7 @@
   "overrides": {
     "@svgr/webpack": "^6.3.1",
     "webpack-bundle-analyzer": "^4.8.0",
-    "typescript": "^5.3.3",
+    "typescript": "^5.4.3",
     "json5": "^2.2.3"
   },
   "eslintConfig": {
@@ -58,6 +62,9 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.56.0"
+    "@types/react-redux": "^7.1.33",
+    "@types/styled-components": "^5.1.34",
+    "babel-plugin-styled-components": "^2.1.4",
+    "eslint": "^8.57.0"
   }
 }
