--- a/package.json
+++ b/package.json
@@ -1,7 +1,26 @@
 {
-  "name": "who-member",
+  "name": "tomorrow-house-admin",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/redux-logger": "^3.0.13",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
+    "@types/react-redux": "^7.1.33",
+    "@types/styled-components": "^5.1.34",
+    "babel-plugin-styled-components": "^2.1.4",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "cra-bundle-analyzer": "^0.1.1",
+    "env-cmd": "^10.1.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-mdx": "^3.1.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "webpack": "^5.91.0",
+    "webpack-bundle-analyzer": "^4.10.2"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^6.4.2",
@@ -22,7 +41,6 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
-    "recoil": "^0.7.7",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
@@ -32,18 +50,21 @@
     "web-vitals": "^3.5.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "serve": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "overrides": {
     "@svgr/webpack": "^6.3.1",
-    "webpack-bundle-analyzer": "^4.8.0",
-    "typescript": "^5.4.5",
-    "json5": "^2.2.3"
+    "webpack-bundle-analyzer": "^4.10.2",
+    "typescript": "^5.4.5"
   },
   "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    },
     "extends": [
       "react-app",
       "react-app/jest"
@@ -61,10 +82,17 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/react-redux": "^7.1.33",
-    "@types/styled-components": "^5.1.34",
-    "babel-plugin-styled-components": "^2.1.4",
-    "eslint": "^9.0.0"
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "optionalDependencies": {
+    "fsevents": "*"
+  },
+  "browser": {
+    "crypto": false
   }
 }
