--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.24.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-redux": "^7.1.33",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.13",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
-    "@types/react-redux": "^7.1.33",
-    "@types/styled-components": "^5.1.34",
     "babel-plugin-styled-components": "^2.1.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "cra-bundle-analyzer": "^0.1.1",
     "env-cmd": "^10.1.0",
     "eslint": "^8.56.0",
-    "eslint-plugin-mdx": "^3.1.5",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-prettier": "^5.1.3",
     "webpack": "^5.91.0",
     "webpack-bundle-analyzer": "^4.10.2"
