--- a/package.json
+++ b/package.json
@@ -2,57 +2,64 @@
   "name": "pure-storybook",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "storybook dev -p 6006 -s public",
+    "storybook": "storybook dev -p 6006 public",
     "build-storybook": "storybook build",
     "chromatic": "npx chromatic --project-token=chpt_4d5b030008896d5"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
-    "@storybook/addon-actions": "^7.6.16",
-    "@storybook/addon-essentials": "^7.6.16",
-    "@storybook/addon-interactions": "^7.6.16",
-    "@storybook/addon-links": "^7.6.16",
-    "@storybook/addon-mdx-gfm": "^7.6.16",
-    "@storybook/html": "^7.6.16",
-    "@storybook/html-webpack5": "^7.6.16",
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
+    "@storybook/addon-actions": "^8.1.2",
+    "@storybook/addon-essentials": "^8.1.2",
+    "@storybook/addon-interactions": "^8.1.2",
+    "@storybook/addon-links": "^8.1.2",
+    "@storybook/addon-mdx-gfm": "^8.1.2",
+    "@storybook/addon-themes": "^8.1.2",
+    "@storybook/blocks": "^8.1.2",
+    "@storybook/html": "^8.1.2",
+    "@storybook/html-webpack5": "^8.1.2",
+    "@storybook/react-webpack5": "^8.1.2",
     "@types/styled-components": "^5.1.34",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
     "babel-loader": "^9.1.3",
     "babel-plugin-styled-components": "^2.1.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "chromatic": "^10.9.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "chromatic": "^11.4.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-mdx": "^3.1.5",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
-    "storybook": "^7.6.16",
-    "webpack": "^5.90.2",
-    "webpack-bundle-analyzer": "^4.10.1"
+    "storybook": "^8.1.2",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "webpack": "^5.91.0",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "dependencies": {
-    "@storybook/addon-docs": "^7.6.16",
-    "@storybook/preset-create-react-app": "^7.6.16",
-    "@storybook/react-webpack5": "^7.6.16",
+    "@storybook/addon-docs": "^8.1.2",
+    "@storybook/preset-create-react-app": "^8.1.2",
     "@types/html-entities": "^1.3.4",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "html-entities": "^2.4.0",
-    "styled-components": "^5.3.9",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "html-entities": "^2.5.2",
+    "styled-components": "^6.1.11",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5"
   },
   "overrides": {
-    "typescript": "^5.3.3",
+    "typescript": "^5.4.5",
     "@svgr/webpack": "^6.3.1",
-    "webpack-bundle-analyzer": "^4.10.1"
+    "webpack-bundle-analyzer": "^4.10.2",
+    "@storybook/react-docgen-typescript-plugin": "npm:react-docgen-typescript-plugin@1.0.2"
   },
   "eslintConfig": {
     "env": {
@@ -92,7 +99,5 @@
   },
   "browser": {
     "crypto": false
-  },
-  "readme": "ERROR: No README data found!",
-  "_id": "pure-storybook@1.0.0"
+  }
 }
