사용법 변경에 따른 테스트

--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,17 +1,5 @@
 {
-  "sourceType": "unambiguous",
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "chrome": 100
-        }
-      }
-    ],
-    "@babel/preset-typescript",
-    "@babel/preset-react"
-  ],
+  "presets": ["react", "es2015"],
   "plugins": [
     [
       "babel-plugin-styled-components",
