--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@storybook/blocks": "^8.1.2",
     "@storybook/html": "^8.1.2",
     "@storybook/html-webpack5": "^8.1.2",
+    "@storybook/manager-api": "^8.1.3",
     "@storybook/react-webpack5": "^8.1.2",
+    "@storybook/theming": "^8.1.3",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
