--- a/libs/storybook/package.json
+++ b/libs/storybook/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
+    "@nx/storybook": "^20.8.1",
     "@storybook/addon-actions": "^8.1.2",
     "@storybook/addon-essentials": "^8.1.2",
     "@storybook/addon-interactions": "^8.1.2",
@@ -23,11 +24,13 @@
     "@storybook/html": "^8.1.2",
     "@storybook/html-webpack5": "^8.1.2",
     "@storybook/manager-api": "^8.1.3",
+    "@storybook/react-vite": "^8.6.12",
     "@storybook/react-webpack5": "^8.1.2",
     "@storybook/theming": "^8.1.3",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
+    "@vitejs/plugin-react": "^4.4.1",
     "babel-loader": "^9.1.3",
     "babel-plugin-styled-components": "^2.1.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
@@ -42,6 +45,7 @@
     "react-scripts": "^5.0.1",
     "storybook": "^8.1.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "webpack": "^5.91.0",
     "webpack-bundle-analyzer": "^4.10.2"
   },
