--- a/nx.json
+++ b/nx.json
@@ -1,7 +1,8 @@
 {
   "projects": {
     "admin": "apps/admin",
-    "service": "apps/service"
+    "service": "apps/service",
+    "storybook": "libs/storybook"
   },
   "installation": {
     "version": "20.8.1"
