Common component separation work for monorepo method

--- a/apps/admin/project.json
+++ b/apps/admin/project.json
@@ -1,26 +1,31 @@
 {
   "name": "admin",
-  "root": "apps/admin",
   "sourceRoot": "apps/admin/src",
   "projectType": "application",
   "targets": {
     "build": {
-      "executor": "nx:run-commands",
+      "executor": "@nx/vite:build",
       "options": {
-        "command": "react-scripts build"
+        "outputPath": "dist/apps/admin",
+        "configFile": "apps/admin/vite.config.ts"
       }
     },
     "serve": {
-      "executor": "nx:run-commands",
+      "executor": "@nx/vite:dev-server",
       "options": {
-        "command": "react-scripts start",
-        "cwd": "apps/admin"
+        "buildTarget": "admin:build"
       }
     },
-    "test": {
-      "executor": "nx:run-commands",
+    "preview": {
+      "executor": "@nx/vite:preview",
       "options": {
-        "command": "react-scripts test"
+        "buildTarget": "admin:build"
+      }
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "options": {
+        "lintFilePatterns": ["apps/admin/**/*.{ts,tsx,js,jsx}"]
       }
     }
   },
