--- a/package.json
+++ b/package.json
@@ -1,11 +1,33 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@nx/js": "20.8.1",
     "@nx/react": "^20.8.1",
     "@nx/vite": "^20.8.1",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/core-server": "^8.6.12",
     "@storybook/react-vite": "^8.6.12",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/node": "^22.15.3",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "@types/react-is": "19.0.0",
+    "@types/styled-components": "5.1.26",
+    "babel-plugin-styled-components": "1.10.7",
+    "prettier": "^2.6.2",
     "storybook": "^8.6.12",
+    "typescript": "~5.7.2",
     "vite": "^6.3.3"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.27.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-is": "19.0.0",
+    "styled-components": "5.3.6",
+    "tslib": "^2.3.0"
   }
 }
