--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -2,25 +2,25 @@
   "name": "tomorrow-house-admin",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "devDependencies": {
     "@babel/core": "^7.24.4",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/react-redux": "^7.1.33",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/redux-logger": "^3.0.13",
-    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
+    "@vitejs/plugin-react": "^4.4.1",
     "babel-plugin-styled-components": "^2.1.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "cra-bundle-analyzer": "^0.1.1",
-    "env-cmd": "^10.1.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-prettier": "^5.2.6",
-    "webpack": "^5.91.0",
-    "webpack-bundle-analyzer": "^4.10.2"
+    "vite": "^6.3.4",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
@@ -32,6 +32,10 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
+    "@types/react-redux": "^7.1.33",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/redux-logger": "^3.0.13",
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.6.8",
     "firebase": "^10.11.0",
     "moment": "^2.30.1",
@@ -40,7 +44,6 @@
     "react-icons": "^5.1.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
@@ -50,44 +53,10 @@
     "typescript": "^5.4.5",
     "web-vitals": "^3.5.2"
   },
-  "scripts": {
-    "serve": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "overrides": {
-    "@svgr/webpack": "^6.3.1",
-    "webpack-bundle-analyzer": "^4.10.2",
-    "typescript": "^5.4.5"
-  },
-  "eslintConfig": {
-    "env": {
-      "browser": true,
-      "node": true
-    },
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "lint-staged": {
-    "*.{js,jsx}": [
+    "*.{js,jsx,ts,tsx}": [
       "eslint --fix",
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "optionalDependencies": {
