--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -1,16 +1,25 @@
 {
   "extends": "../../tsconfig.base.json",
-  "target": "ES2021",
   "compilerOptions": {
-    "baseUrl": "src",
+    "baseUrl": ".",
     "jsx": "react-jsx",
-    "module": "ES2020",
-    "target": "ES2020",
-    "lib": ["DOM", "ES2021", "esnext"],
+    "module": "ESNext",
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "skipLibCheck": true,
+
+    /* Linting */
     "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+
     "paths": {
-      "@admin/*": ["apps/admin/src/*"]
+      "@ecommerce/commons": ["../../libs/commons/src/index.ts"],
+      "@ecommerce/commons/*": ["../../libs/commons/src/*"]
     }
   },
-  "include": ["src"]
+  "moduleResolution": "Node",
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
