Update styled-compoents (ver 5.3.6 > ^6.1.17)

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-is": "19.0.0",
-    "styled-components": "5.3.6",
+    "styled-components": "^6.1.17",
     "tslib": "^2.3.0"
   }
 }
