--- a/apps/service/tsconfig.json
+++ b/apps/service/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "es5",
+    "target": "esnext",
     "baseUrl": ".",
     "types": ["vite/client"],
     "declaration": true,
