--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -6,7 +6,7 @@
     "declaration": true,
     "jsx": "react-jsx",
     "module": "ESNext",
-    "target": "es5",
+    "target": "esnext",
     "lib": ["dom", "dom.iterable", "es2018", "esnext"],
     "skipLibCheck": true,
     "useDefineForClassFields": true,
