--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,7 +18,7 @@
     "target": "es2020",
     "module": "ESNext",
     "verbatimModuleSyntax": true,
-    "lib": ["es2020", "dom"],
+    "lib": ["dom", "dom.iterable", "es2018", "esnext"],
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   }
