--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "locale": "ko",
   "compilerOptions": {
-    "target": "es5",
+    "target": "esnext",
     "paths": {
       "@admin/*": ["apps/admin/src/*"]
     },
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable", "es2018", "esnext"],
+
     "allowJs": true,
     "checkJs": true,
     "skipLibCheck": true,
