--- a/package.json
+++ b/package.json
@@ -1,35 +1,80 @@
 {
+  "name": "ecommerce-monorepo",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
+  "scripts": {
+    "dev:admin": "nx serve admin",
+    "dev:service": "nx serve service",
+    "build:admin": "nx build admin",
+    "build:service": "nx build service",
+    "lint": "nx lint"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.6.8",
+    "cross-env": "^7.0.3",
+    "firebase": "^10.11.0",
+    "html-entities": "^2.5.2",
+    "moment": "^2.30.1",
+    "moment-duration-format": "^2.3.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.1.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.0",
+    "react-slick": "^0.30.2",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.19",
+    "swiper": "^11.1.9",
+    "tslib": "^2.8.1",
+    "web-vitals": "^3.5.2"
+  },
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
     "@nx/js": "21.3.11",
-    "@nx/react": "^21.3.11",
-    "@nx/vite": "^21.3.11",
+    "@nx/react": "21.3.11",
+    "@nx/vite": "21.3.11",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/core-server": "^8.6.14",
     "@storybook/react-vite": "^9.1.1",
     "@swc-node/register": "~1.10.10",
     "@swc/core": "~1.13.3",
     "@swc/helpers": "~0.5.17",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/html-entities": "^1.3.4",
+    "@types/jest": "^29.5.12",
+    "@types/moment-duration-format": "^2.2.6",
     "@types/node": "^24.2.1",
-    "@types/react": "19.1.9",
-    "@types/react-dom": "19.1.7",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-is": "19.0.0",
+    "@types/react-redux": "^7.1.33",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/redux-logger": "^3.0.13",
     "@types/styled-components": "5.1.34",
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "@typescript-eslint/parser": "^8.0.1",
+    "@vitejs/plugin-react": "^4.4.1",
     "babel-plugin-styled-components": "2.1.4",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-mdx": "^3.1.5",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.9",
     "nx": "^21.3.11",
     "prettier": "^3.6.2",
     "storybook": "^9.1.1",
-    "typescript": "~5.9.2",
-    "vite": "^7.1.1"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.28.2",
-    "moment": "^2.30.1",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "react-is": "19.1.1",
-    "styled-components": "^6.1.19",
-    "tslib": "^2.8.1"
+    "typescript": "^5.5.4",
+    "vite": "^7.1.1",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
